# mmap_diagram

./: .gitignore  LICENSE  Makefile  README.md  do_make  mmap_diagram.py  pyproject.toml  readme.md  requirements.txt  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: python-app.yml
doc/example/: A3_maxaddress_lower_than_memregions.json  A3_maxaddress_lower_than_memregions.md  A3_region_exceeds_height-no_maxaddress_set.json  A3_region_exceeds_height-no_maxaddress_set.md  A3_region_freespace_exceeds_height-higher_maxaddress_set.json  A3_region_freespace_exceeds_height-higher_maxaddress_set.md  A4_maxaddress_lower_than_memregions.json  A4_maxaddress_lower_than_memregions.md  A4_region_exceeds_height-no_maxaddress_set.json  A4_region_exceeds_height-no_maxaddress_set.md  A4_region_freespace_exceeds_height-higher_maxaddress_set.json  A4_region_freespace_exceeds_height-higher_maxaddress_set.md  A5_maxaddress_lower_than_memregions.json  A5_maxaddress_lower_than_memregions.md  A5_region_exceeds_height-no_maxaddress_set.json  A5_region_exceeds_height-no_maxaddress_set.md  A6_maxaddress_lower_than_memregions.json  (+48 more)
mm/: datamodel.py  diagram.py  image.py  metamodel.py  schema.json  schema.py  types.py
mmdiagram/: generator.py  types.py
tests/: common_fixtures.py  test_args.py  test_arrow.py  test_colours.py  test_distance.py  test_docs.py  test_lockabledict.py  test_mmdiagram.py  test_page_sizes.py  test_scaling.py  test_schema.py  test_skip_regions.py  test_standalone.py  test_void_regions.py
(+2 files in other folders)
